update social media

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
       </ul>
       <div class="menu-footer right-boxed">
         <div class="social-list">
-          <a href="#" class="icon ion-social-twitter"></a>
-          <a href="#" class="icon ion-social-facebook"></a>
-          <a href="#" class="icon ion-social-googleplus"></a>
-          <a href="#" class="icon ion-social-linkedin"></a>
-          <a href="#" class="icon ion-social-dribbble-outline"></a>
+          <a href="https://twitter.com/kodeingatan" class="icon ion-social-twitter"></a>
+          <a href="https://www.facebook.com/kodeingatan/" class="icon ion-social-facebook"></a>
+          <a href="https://www.instagram.com/kodeingatan/" class="icon ion-social-instagram"></a>
+          <a href="https://www.linkedin.com/in/afdal-362235180/" class="icon ion-social-linkedin"></a>
+          <a href="https://github.com/4fdal" class="icon ion-social-github"></a>
         </div>
-        <div class="copy"><a href="templateshub.net">Templates Hub</a></div>
+        <!-- <div class="copy"><a href=""></a></div> -->
       </div>
     </div>
 
@@ -84,21 +84,21 @@
         <span class="icon-bar"></span>
       </button>
       <div class="contacts d-none d-md-block">
-        <div class="contact-item">+628-9570-8870-305</div>
+        <div class="contact-item">+62 813-6456-9155</div>
         <div class="contact-item spacer">/</div>
         <div class="contact-item">
-          <a href="mailto: afdal.develop@gmail.com"><span class="__cf_email__"
-              data-cfemail="d0b3bfbea4b1b3a490a2bfb2b5a2a4feb3bfbd">afdal.develop@gmail.com</span></a>
+          <a href="mailto: kodeingatan@gmail.com"><span class="__cf_email__"
+              data-cfemail="d0b3bfbea4b1b3a490a2bfb2b5a2a4feb3bfbd">kodeingatan@gmail.com</span></a>
         </div>
       </div>
     </header>
     <div class="copy-bottom white boxed">© Afdal 2023.</div>
     <div class="social-list social-list-bottom boxed">
-      <a href="#" class="icon ion-social-twitter"></a>
-      <a href="#" class="icon ion-social-facebook"></a>
-      <a href="#" class="icon ion-social-googleplus"></a>
-      <a href="#" class="icon ion-social-linkedin"></a>
-      <a href="#" class="icon ion-social-dribbble-outline"></a>
+      <a href="https://twitter.com/kodeingatan" class="icon ion-social-twitter"></a>
+      <a href="https://www.facebook.com/kodeingatan/" class="icon ion-social-facebook"></a>
+      <a href="https://www.instagram.com/kodeingatan/" class="icon ion-social-instagram"></a>
+      <a href="https://www.linkedin.com/in/afdal-362235180/" class="icon ion-social-linkedin"></a>
+      <a href="https://github.com/4fdal" class="icon ion-social-github"></a>
     </div>
     <div class="pagepiling">
       <div data-anchor="page1" class="pp-scrollable text-white section section-1">
@@ -793,12 +793,12 @@
                           </h5>
                           <section class="contact-address">
                             <h3>
-                              <a class="mail" href="mailto: afdal.develop@gmail.com">
+                              <a class="mail" href="mailto: kodeingatan@gmail.com">
                                 <span class="__cf_email__"
-                                  data-cfemail="10737f7e6471736450627f727562643e737f7d">afdal.develop@gmail.com</span></a>
+                                  data-cfemail="10737f7e6471736450627f727562643e737f7d">kodeingatan@gmail.com</span></a>
                             </h3>
                             <h3>
-                              <span class="phone">+628-9570-8870-305</span>
+                              <span class="phone">+62 813-6456-9155</span>
                             </h3>
                           </section>
                         </div>
