add new sosial media youtube

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           <a href="https://twitter.com/kodeingatan" class="icon ion-social-twitter"></a>
           <a href="https://www.facebook.com/kodeingatan/" class="icon ion-social-facebook"></a>
           <a href="https://www.instagram.com/kodeingatan/" class="icon ion-social-instagram"></a>
+          <a href="https://www.youtube.com/@kodeingatan" class="icon ion-social-youtube"></a>
           <a href="https://www.linkedin.com/in/afdal-362235180/" class="icon ion-social-linkedin"></a>
           <a href="https://github.com/4fdal" class="icon ion-social-github"></a>
         </div>
@@ -97,6 +98,7 @@
       <a href="https://twitter.com/kodeingatan" class="icon ion-social-twitter"></a>
       <a href="https://www.facebook.com/kodeingatan/" class="icon ion-social-facebook"></a>
       <a href="https://www.instagram.com/kodeingatan/" class="icon ion-social-instagram"></a>
+      <a href="https://www.youtube.com/@kodeingatan" class="icon ion-social-youtube"></a>
       <a href="https://www.linkedin.com/in/afdal-362235180/" class="icon ion-social-linkedin"></a>
       <a href="https://github.com/4fdal" class="icon ion-social-github"></a>
     </div>
