--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                             <span class="text-primary">Hello</span> I am<br />
                             Afdal.
                           </h1>
-                          <a href="https://www.youtube.com/watch?v=0O2aH4XLbto"
-                            class="popup-youtube icon ion-ios-play"></a>
+                          <a href="https://www.youtube.com/@kodeingatan" class="popup-youtube icon ion-ios-play"></a>
                         </div>
                       </div>
                     </div>
