add google analytic

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
   <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png" />
   <title>Afdal - Portofolio</title>
 
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KGHBV5E610"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-KGHBV5E610');
+  </script>
+
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&amp;display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i&amp;display=swap" rel="stylesheet" />
