--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
           <a href="mailto: kodeingatan@gmail.com"><span class="__cf_email__"
               data-cfemail="d0b3bfbea4b1b3a490a2bfb2b5a2a4feb3bfbd">kodeingatan@gmail.com</span></a>
         </div>
+        <div class="contact-item">
+          <a href="/ika"><span class="__cf_email__"
+              >Wedding Invitation</span></a>
+        </div>
       </div>
     </header>
     <div class="copy-bottom white boxed">© Afdal 2023.</div>
