--- a/ika/index.html
+++ b/ika/index.html
@@ -3018,7 +3018,7 @@
                 >
                   <div class="elementor-widget-container">
                     <span class="elementor-heading-title elementor-size-default"
-                      >Ika Repina</span
+                      >Ika Repina, A.Md.T</span
                     >
                   </div>
                 </div>
@@ -3152,7 +3152,7 @@
                 >
                   <div class="elementor-widget-container">
                     <span class="elementor-heading-title elementor-size-default"
-                      >Afdal</span
+                      >Afdal, S.Tr.Kom</span
                     >
                   </div>
                 </div>
